final final commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p class="subH1">Between weightlifting and cars, it is a very difficult choice when asked what my favorite hobby is. Modifying japanese cars and taking them to meets and shows has been a staple in my life, ever since adolescence. Building a few project cars over the years, I have learned several things.</p>
     <div> <!-- chr img -->
         <img class="chr" src="images/chr.jpg" alt="my chr">
+        <caption>
+            <figcaption style="text-align: center; color: #72809D; font-weight: bold; padding-bottom: 10px;">My Chr, it gets used and abused ervy day, it's my daily.</figcaption>
+        </caption>
     </div>
 
     <div class="fundamentals">
@@ -29,10 +32,14 @@
 
     <div> <!-- lexus img-->
         <img class="lexus" src="images/lexus.jpg" alt="my lexus">
+        <caption>
+            <figcaption style="text-align: center; color: #72809D; font-weight: bold; padding-bottom: 10px;">My lexus, still a work in progress</figcaption>
+        </caption>
     </div>
 
     <button id="mainBtn">Click Here</button>
 
     <script src="script.js"></script>
+
 </body>
 </html>
