--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div> <!-- chr img -->
         <img class="chr" src="images/chr.jpg" alt="my chr">
         <caption>
-            <figcaption style="text-align: center; color: #72809D; font-weight: bold; padding-bottom: 10px;">My Chr, it gets used and abused ervy day, it's my daily.</figcaption>
+            <figcaption style="text-align: center; color: #72809D; font-weight: bold; padding-bottom: 10px;">My Chr, it gets used and abused every day, it's my daily.</figcaption>
         </caption>
     </div>
 
